--- a/WAWGH/report.Rmd
+++ b/WAWGH/report.Rmd
@@ -1,29 +1,26 @@
 ---
 title: "Menu next week and shopping list"
-output: html_document
+output: pdf_document
 date: "`r Sys.Date()`"
+params:
+  menu: NA
+  shopping_list: NA
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+# Meal Plan 
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
-
-```{r cars}
-summary(cars)
+```{r, echo=FALSE}
+kableExtra::kable(params$menu)
 ```
 
-## Including Plots
 
-You can also embed plots, for example:
+# Shopping list 
 
-```{r pressure, echo=FALSE}
-plot(pressure)
+
+```{r, echo=FALSE}
+kableExtra::kable(params$shopping_list)
 ```
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
